# space-sim

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: agents.yml
apps/contract_check/: CMakeLists.txt  main.cpp
apps/sandbox/: CMakeLists.txt  main.cpp
contracts/: IRenderer.hpp  ISimulation.hpp  IUI.hpp  VERSION.md
engine/core/: Logging.cpp  Logging.hpp  Types.hpp
engine/renderer/: CMakeLists.txt  RendererMock.cpp  RendererMock.hpp
engine/renderer/tests/: CMakeLists.txt  test_sphere_stub.cpp
engine/sim/: CMakeLists.txt  SimulationMock.cpp  SimulationMock.hpp
engine/sim/tests/: CMakeLists.txt  test_golden_stub.cpp
engine/ui/: CMakeLists.txt  UiMock.cpp  UiMock.hpp
prompts/: architect.md  renderer.md  sim.md  ui.md
tools/golden/: solar_system.json
